welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:50: error: not found: value Fleur
	Fleur();
        ^FlowerCase:54: error: not found: value Fleur
	Fleur();
        ^